# Advanced-RAGS

./: README.md  main.py  pyproject.toml
Corrective RAG(CRAG)/: 001_Knowledge_Refinement.ipynb  002_Retrieval_Evaluation.ipynb  003.ipynb
