[project]
name = "advanced-rags"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.14",
    "langchain-google-genai>=4.2.1",
    "langchain-huggingface>=1.2.0",
    "langgraph>=1.0.9",
    "pydantic>=2.12.5",
    "pypdf>=6.7.2",
    "sentence-transformers==2.7.0",
    "torch>=2.10.0",
    "transformers==4.41.2",
]
